--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     left: 0;
     object-fit: contain;
 }
-.signup-wrapper {
+.start-wrapper {
     background-color: #FFFFFF;
     box-shadow: 0px 10px 40px 0;
     width: 500px;
@@ -33,18 +33,18 @@ body {
     right: 91px;
     top: 50px;
 }
-.signup-top {
+.start-top {
     padding-top: 50px;
 }
-.signup-item {
+.start-item {
     max-width: 75%;
     margin: 0 auto;
 }
-.signup-item h1 {
+.start-item h1 {
     font-size: 40px;
     color: #31394D;
 }
-.signup-item p {
+.start-item p {
     font-size: 16px;
     color: #748AA1;
 }
