--- a/style.css
+++ b/style.css
@@ -48,14 +48,14 @@ body {
     font-size: 16px;
     color: #748AA1;
 }
-.form-wrapper {
+.SFO-wrapper {
     margin: 0 auto;
     box-shadow: 0px 1px 20px #E5E9F2;
     border-radius: 5px;
     margin-top: 30px;
     min-height: 350px;
 }
-.form-item {
+.SFO-item {
     padding-top: 25px;
 }
 input {
@@ -85,7 +85,7 @@ input::placeholder {
     margin-top: 30px;
     position: relative;
 }
-.change {
+.clickthing {
     position: absolute;
     right: 20px;
     top: 37px;
