--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ input::-webkit-inner-spin-button {
 .signup-wrapper-black input::placeholder {
     color: #FFFFFF;
 }
-.form-wrapper {
+.SFO-wrapper {
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
 }
 .signup-wrapper-black input, .signup-wrapper-black select {
